tests/div_zero.expected
tests/div_zero.mira:2: runtime error: division by zero
