tests/div_zero.mira
fn main(): void {
    let x = 10 / 0;
    print(x);
}
